fix(compare): optimize chart cache and rendering [skip release] (#73)
* fix(compare): optimize cache hit for initial orgunits

* fix: select actual first orgunits

* fix(chart): optimize comparison by enabling virtuoso correctly

* fix(chart): memo comparisonplot

* fix(splitpointslider): dont render slider until periods are loaded

* fix: dont fetch data while overlap is loading

* fix: show plot loading-indicator over card

--- a/packages/prediction-app/src/features/evaluation-compare/EvaluationCompare.module.css
+++ b/packages/prediction-app/src/features/evaluation-compare/EvaluationCompare.module.css
@@ -13,6 +13,7 @@
 }
 
 .loaderWrapper {
+    z-index: 1;
     position: relative;
     align-self: center;
     /* counteract gap in selectionToolbar */
